Fix gap

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -21,6 +21,8 @@ main {
 	
 }
 
+
+
 .carousel-control-next-icon {
 	display: none;
 }
@@ -156,19 +158,13 @@ a:hover {
 	}
 }
 
-/* @media (max-width: 500px) {
-    #grid {
-        display: flex;
-        flex-direction: column;
-    }
-
-} */
 
 @media (max-width: 670px) {
 	#mainContainer {
 		padding-left: 30px;
 		padding-right: 30px;
 	}
+	
 }
 
 @media (max-width: 500px) {
@@ -176,10 +172,18 @@ a:hover {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
+
+	
 }
 
 @media (max-width: 280px) {
 	.imgDiv {
 		font-size: 0.9em;
 	}
+
+	#navDivRight {
+		gap: 0px;
+	}
+
+	
 }
